--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,16 +1,17 @@
 version: "3.7"
+volumes:
+  share1:
 services:
   dev:
-    build: ./
     volumes:
-      - data-volume:/boxfuse-sample-java-war-hello/
+#      /usr/local/tomcat9/webapps/
+      - /shareprod:/boxfuse-sample-java-war-hello/target/
+    build: ./
   prod:
     image: tomcat:9.0.62-jdk11-temurin-focal
     volumes:
-      - data-volume:/usr/local/tomcat/webapps/
+      - shareprod:/usr/local/tomcat/webapps/
     ports:
       - "8080:8080"
-volumes:
-  data-volume:
 
 
